title align-center corrected

--- a/style.css
+++ b/style.css
@@ -5,18 +5,14 @@ body {
 }
 
 header {
-  text-align: center;
   background-color: #333;
   color: #fff;
   padding: 20px;
 }
 
-nav {
-  text-align: center;
-}
 
 nav ul {
-  list-style: inline-block;
+  list-style: none;
   margin: 0;
   padding: 0;
 }
